6743433: IM candidate window is not shown until window is deactivated and reactivated again

OpenCandidateWindow procedure should directly call ::DefWindowProc

Reviewed-by: art